Configurando arquivo dotenv

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx playwright test",
-    "test:ui": "npx playwright test --ui"
+    "test:ui": "npx playwright test --ui",
+    "terminal": "npx playwright test"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@faker-js/faker": "^10.0.0",
     "@playwright/test": "^1.56.0",
-    "@types/node": "^24.7.1"
+    "@types/node": "^24.7.1",
+    "dotenv": "^17.2.3"
   }
 }
