--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npx playwright test",
     "test:ui": "npx playwright test --ui",
-    "terminal": "npx playwright test"
+    "test:health": "artillery run performance/tests/health.yaml"
+
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@faker-js/faker": "^10.0.0",
     "@playwright/test": "^1.56.0",
     "@types/node": "^24.7.1",
+    "artillery": "^2.0.26",
     "dotenv": "^17.2.3",
     "pg": "^8.16.3"
   }
